--- a/src/app/general-settings/general-settings.component.html
+++ b/src/app/general-settings/general-settings.component.html
@@ -141,7 +141,10 @@
             </th>
             <td mat-cell *matCellDef="let element">
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 (click)="editDevice(element)"
                 matTooltip="Modifier"
                 class="btn updateData5"
@@ -149,7 +152,10 @@
                 <mat-icon>edit</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 (click)="changeIcon(element.id)"
                 matTooltip="Changer icon"
                 class="btn updateData"
@@ -157,7 +163,10 @@
                 <mat-icon>description</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 class="btn updateData3"
                 [routerLink]="['/device-history', element.id, 'changement']"
                 matTooltip="Historique de changements"
@@ -165,7 +174,10 @@
                 <mat-icon>history</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 class="btn updateData6"
                 [routerLink]="['/device-history', element.id, 'alerte']"
                 matTooltip="Historique d'alerte"
@@ -173,7 +185,10 @@
                 <mat-icon>warning</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 (click)="checkStatus(element.deviceNumber)"
                 matTooltip="Check status"
                 class="btn updateData2"
@@ -181,7 +196,10 @@
                 <mat-icon>dialpad</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 (click)="
                   changePowerStatus(element.deviceNumber, element.activated)
                 "
@@ -195,7 +213,10 @@
                 }}</mat-icon>
               </button>
               <button
-                [disabled]="element.status === NEEDCONFIRMATION"
+                [disabled]="
+                  element.status === NEEDCONFIRMATION ||
+                  element.blinkCredit === true
+                "
                 (click)="activateTrack(element.deviceNumber)"
                 matTooltip="Tracker position"
                 class="btn updateData1"
