--- a/src/app/modals/edit-device/edit-device.component.html
+++ b/src/app/modals/edit-device/edit-device.component.html
@@ -22,7 +22,7 @@
             pattern="^(034|032|033|038)\d{7}$"
             matInput
             formControlName="deviceNumber"
-            placeholder="Enter Adresse serveur"
+            placeholder="Enter numéro téléphone"
           />
         </mat-form-field>
       </div>
