--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -37,32 +37,285 @@
 
   <br />
 
-  <div class="container">
-    <h2>Utilisateur</h2>
+  <div class="container card-style">
+    <h2>
+      Configuration des délais d'attentes
+      <span class="info-icon">
+        <mat-icon>info</mat-icon>
+        <span class="tooltip-text"
+          >Les délais d'attentes pour que le dispositif réponde avant la
+          restauration des paramètres</span
+        >
+      </span>
+    </h2>
 
-    <button class="btn btn-success btn-lg">Reset password</button>
-    <button class="btn btn-success btn-lg">Change password</button>
-    <br />
-    <br />
-    <br />
+    <form>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="information" class="form-label">Information</label>
+          <div class="input-group">
+            <input
+              type="text"
+              id="information"
+              [value]="config.information | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('information', config.information)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
 
-    <br />
-    <br />
-    <h2>Paramètres</h2>
-    <p>Liste des paramètres</p>
+        <div class="col-md-6">
+          <label for="seuil" class="form-label">Courant</label>
+          <div class="input-group">
+            <input
+              type="text"
+              id="seuil"
+              [value]="config.seuil | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('seuil', config.seuil)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
+      </div>
 
-    <br />
-    <br />
-    <h2>Log</h2>
-    <p>Log des erreurs</p>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="status" class="form-label">Status</label>
+          <div class="input-group">
+            <input
+              type="text"
+              id="status"
+              [value]="config.status | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('status', config.status)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <label for="alert" class="form-label">Stop alerte</label>
+          <div class="input-group">
+            <input
+              type="text"
+              id="alert"
+              [value]="config.alert | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('alert', config.alert)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="track" class="form-label">Track</label>
+          <div class="input-group">
+            <input
+              type="text"
+              id="track"
+              [value]="config.track | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('track', config.track)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <label for="confirmation" class="form-label"
+            >Confirmation du matériel</label
+          >
+          <div class="input-group">
+            <input
+              type="text"
+              id="confirmation"
+              [value]="config.confirmation | timeFormat"
+              class="form-control"
+              readonly
+            />
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="getPicker('confirmation', config.confirmation)"
+            >
+              Modifier
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
-</div>
 
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
-  <p style="font-size: 20px; color: white">Loading...</p>
-</ngx-spinner>
+  <div class="container">
+    <br /><br />
+    <h2>
+      <span class="titleItem"> Historique de log d'erreur</span>
+    </h2>
+    <br />
+    <br />
+    <mat-form-field subscriptSizing="dynamic">
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Mia"
+        #input
+      />
+    </mat-form-field>
+
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      class="mat-elevation-z8 demo-table"
+      matSort
+    >
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef class="header">Identifiant</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.id }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef class="header">Date</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdAt | date : "dd/MM/yyyy HH:mm" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="deviceId">
+        <th mat-header-cell *matHeaderCellDef class="header">Device Id</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element?.device?.id }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="queue">
+        <th mat-header-cell *matHeaderCellDef class="header">
+          Identification de l'erreur
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.queue }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="values">
+        <th mat-header-cell *matHeaderCellDef class="header">Valeur</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.values }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+
+    <br /><br />
+    <h2>
+      <span class="titleItem"> Utilisateur</span>
+    </h2>
+    <br />
+    <button class="btn btn-success btn-lg" (click)="resetPassword()">
+      Réinitialiser le mot de passe
+    </button>
+    <button class="btn btn-success btn-lg" (click)="togglePasswordForm()">
+      Changer le mot de passe
+    </button>
+    <button class="btn btn-danger btn-lg" disabled>
+      Changer le numéro du serveur
+    </button>
+
+    <div
+      *ngIf="showPasswordForm"
+      @fadeInOutAnimation
+      class="password-form-container"
+    >
+      <form (ngSubmit)="changePassword()" #passwordForm="ngForm">
+        <br /><br /><br />
+
+        <mat-form-field appearance="fill" class="password-input">
+          <mat-label>Ancien mot de passe</mat-label>
+          <input
+            matInput
+            type="password"
+            [(ngModel)]="oldPassword"
+            name="oldPassword"
+            required
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="password-input">
+          <mat-label>Nouveau mot de passe</mat-label>
+          <input
+            matInput
+            type="password"
+            [(ngModel)]="newPassword"
+            name="newPassword"
+            required
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="password-input">
+          <mat-label>Confirmer le mot de passe</mat-label>
+          <input
+            matInput
+            type="password"
+            [(ngModel)]="confirmPassword"
+            name="confirmPassword"
+            required
+          />
+        </mat-form-field>
+        <mat-error *ngIf="confirmPassword && confirmPassword !== newPassword">
+          Les mots de passe ne correspondent pas
+        </mat-error>
+        <button
+          type="submit"
+          [disabled]="passwordForm.invalid || newPassword !== confirmPassword"
+          class="btn btn-success btn-lg"
+        >
+          Confirmer
+        </button>
+      </form>
+    </div>
+  </div>
+  <br /><br /><br /><br />
+</div>
