--- a/src/app/device-history/device-history.component.html
+++ b/src/app/device-history/device-history.component.html
@@ -193,6 +193,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="courant">
+          <th mat-header-cell *matHeaderCellDef class="header">Courant</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.activated }}
+          </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumnsTwo"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsTwo"></tr>
 
